<resources>
    <string name="app_name">Phase 10 Scores</string>
    <string name="appstart_head">Ergebinszettelkasten</string>
    <string name="entry1_footer">Erstellen und speichern Deiner\nPhase 10 Spielgergbisse</string>
    <string name="entry2_footer">Anlegen von Spielern und Spielergruppen</string>
    <string name="entry3_footer">Verwalten der Ergebnisse von Spielen in einer Spielrunde</string>

    <!-- Gruppe -->
    <string name="menu_creategroup">Gruppe anlegen</string>
    <string name="menu_group">Gruppen</string>
    <string name="lbl_group">Gruppen verwalten</string>
    <string name="head_grouplist">Guppenliste</string>
    <string name="welcome_group">Hallo Gruppe</string>

    <!-- Player -->
    <string name="menu_createplayer">Spieler anlegen</string>
    <string name="menu_player">Spieler</string>
    <string name="welcome_player">Hallo Spieler</string>
    <string name="head_playerlist">Spielerliste</string>
    <string name="lbl_player">Spieler verwalten</string>
    <string name="players_show_for_groups">Spieler dieser Gruppe anzeigen</string>
    <string name="player_name">Spielername</string>
    <string name="players_in_group">Spieler in der Gruppe</string>

    <!-- Session -->
    <string name="menu_session">Spielrunden</string>
    <string name="welcome_session">Hallo Spielrunde</string>
    <string name="head_sessionlist">Spielrunden der Gruppen</string>
    <string name="lbl_session">Spielrunden verwalten</string>

    <!-- Session Start -->
    <string name="menu_startsession">Spielrunde starten</string>
    <string name="welcome_sessionstart">Hallo Spielrunde starten</string>
    <string name="lbl_sessionstart">Spielrunde starten</string>
    <string name="head_sessionstart">Für welche Gruppe möchtest Du eine Spielrunde starten?</string>

    <string name="loremipsum_5">Lorem ipsum dolor sit amet</string>
    <string name="groupname">Spielergruppe</string>
    <string name="start_session">Spielrunde starten</string>
    <string name="empty" />
    <string name="add_player">Spieler hinzufügen</string>
    <string name="loremipsum_100">
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
    </string>
    <string name="cmd_ok">OK</string>
    <string name="cmd_cancel">Abbruch</string>
    <string name="msg_bad_request">Fehlerhafte URL. Daten können nicht vom Server geholte werden!</string>
    <string name="lbl_player_dlg">Spieler einer Gruppe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
