<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listitem_playergroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_playergroup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:hint="@string/groupname"
        android:textSize="@dimen/big"
        app:layout_constraintBottom_toBottomOf="@+id/cmd_add_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cmd_add_player" />

    <ImageButton
        android:id="@+id/cmd_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:tooltipText="@string/add_player"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_person_48" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/cmd_add_player"
        app:layout_constraintStart_toEndOf="@+id/txt_playergroup_name"
        app:layout_constraintTop_toTopOf="@+id/cmd_add_player" />

    <TextView
        android:id="@+id/cmd_players_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/no_margin"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/players_show_for_groups"
        android:textColor="@color/colorBlue"
        android:autoLink="all"
        app:layout_constraintStart_toStartOf="@+id/txt_playergroup_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_playergroup_name" />
</android.support.constraint.ConstraintLayout>
