<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/id_txt_pdl_head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_marginEnd="8dp"
            android:text="@string/players_in_group"
            android:textColor="@color/colorTxtWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/id_img_pdl_head"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/id_img_pdl_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_group_48" />

        <TextView
            android:id="@+id/id_txt_pdl_group_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/loremipsum_5"
            android:textColor="@color/colorTxtWhite"
            android:textSize="@dimen/big"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/id_txt_pdl_head"
            app:layout_constraintTop_toBottomOf="@+id/id_txt_pdl_head" />

        <ImageButton
            android:id="@+id/id_cmd_pdl_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorTransparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_dialog" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <!--
        <TextView
            android:id="@+id/pld_txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/loremipsum_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        -->
        <fragment
            android:id="@+id/id_fragment_pld"
            android:name="de.auli.ph10app.fragment.PlayerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/id_cmd_pdl_ok"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cmd_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_fragment_pld" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>